# geniodiocanrollup

./: .gitignore  AGENTS.md  CODEBASE_AUDIT.md  GENIO_ANALYSIS_REPORT.md  GENIO_COMPREHENSIVE_ANALYSIS.md  GENIO_IMPLEMENTATION_PLAN_FINAL.md  GENIO_MVP_IMPLEMENTATION_PLAN.md  GENIO_MVP_SELECTION.md  GENIO_MVP_UNIFIED.md  GENIO_PRD_FINAL.md  GENIO_PRD_UNIFIED.md  GENIO_PRODUCT_ARCHITECTURE.md  LIBRARY_IMPLEMENTATION_PLAN.md  LIBRARY_MVP.md  LIBRARY_PRD.md  MVP_kimi.md  PRD_kimi.md  dicsussion_6  discussion_4  discussion_5  discussion_7  discussion_8
genio-mvp/backend/: .dockerignore  Dockerfile  SECURITY_AUDIT_REPORT.md  pyproject.toml  requirements.txt
genio-mvp/backend/alembic/: env.py
genio-mvp/backend/alembic/versions/: 001_initial_schema.py  002_add_library_and_lab_tables.py  (+13 more)
genio-mvp/backend/app/: __init__.py  main.py
genio-mvp/backend/scripts/: generate_api_client.py  seed_database.py
genio-mvp/backend/tests/: conftest.py  load_test.py  test_activity_model.py  test_ai_gateway.py  test_analytics_dashboard.py  test_api_deps.py  test_article_comments.py  test_articles_api.py  test_audit_fixes.py  test_auth.py  test_briefs_api.py  test_dedup.py  test_document_fsm.py  test_document_service.py  test_documents_api.py  test_e2e.py  test_feeds.py  test_fulltext_search.py  test_graph_extractor.py  test_imports.py  test_keyboard_shortcuts.py  test_lab.py  test_library.py  test_migration_002.py  test_performance.py  test_reading_list_api.py  test_saved_views.py  test_scout_advanced.py  test_security.py  test_system_integration.py  test_tagging_system.py  test_tasks.py
(+326 files in other folders)
